--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "yandexid"
-version = "0.2.0"
+version = "0.3.0"
 description = "Yandex ID oauth API wrapper"
 authors = ["Maxim Mosin <max@mosin.pw>"]
 license = "MIT"
@@ -25,6 +25,7 @@ packages = [
 python = "^3.10"
 httpx = "^0.23.3"
 pydantic = "^1.10.4"
+PyJWT = "^2.6.0"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.991"
@@ -37,7 +38,7 @@ requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.bumpver]
-current_version = "0.2.0"
+current_version = "0.3.0"
 version_pattern = "MAJOR.MINOR.PATCH"
 commit_message = "Bump version {old_version} -> {new_version}"
 commit = false
